trunk/Archive2/dc/b83d4eb503a774/output
main.cpp:7:5: error: use of undeclared identifier 'symbo'; did you mean 'symbol'?
    symbo = 1337;
    ^~~~~
    symbol
main.cpp:6:10: note: 'symbol' declared here
    auto symbol = 42;
         ^
1 error generated.
