trunk/Archive2/dc/b83d4eb503a774/main.cpp
#include <iostream>
#include <functional>

int main()
{
    auto symbol = 42;
    symbo = 1337;
}